--- a/contato.html
+++ b/contato.html
@@ -5,25 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        a:hover {
-            color: red;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/style.css">
 <body>
     <div align="center" class="teste">
         <nav>
