--- a/equipe.html
+++ b/equipe.html
@@ -1,61 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe</title>
-    <link rel="stylesheet" href="style.css">
-     <style>
-        a:hover {
-            color: red;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Equipe</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body vlink="white">
-    <div align=center class="teste">
-        <nav>
-            <a href="../site_empresarial/index.html"><font color="white">Home</font></a>
-            <a href="../site_empresarial/quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../site_empresarial/portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../site_empresarial/equipe.html"><font color="white">Equipe</font></a>
-            <a href="../site_empresarial/contato.html"><font color="white">Contato</font></a>
-        </nav>
-    </div>    
-    <hr style="color: white;">
+<body>
+  <nav>
+    <a href="../site_empresarial/index.html">Home</a>
+    <a href="../site_empresarial/quemsomos.html">Quem somos</a>
+    <a href="../site_empresarial/portifolio.html">Portifólio</a>
+    <a href="../site_empresarial/contato.html">Contato</a>
+    <a href="../site_empresarial/equipe.html">Equipe</a>
+  </nav>
 
-    <h1 class="titulo1">Conheça nossa equipe</h1>
-    <p class="titulo1">Por trás de cada linha de código, existe um rosto. Conheça as pessoas que tornam isso possível.</p>
-
-    <h2 class="titulo1">Renner Farias</h2>
-    <p class="titulo1">Responsável pelo desenvolvimento e coordenação técnica do projeto.</p>
-    <a href="Membros/renner.html">Ver perfil completo</a>
-
-    <h2 class="titulo1">José Artur</h2>
-    <p class="titulo1">Responsável pela identidade visual e experiência do usuário.
-    </p>
-    <a href="Membros/jose.html">Ver perfil completo</a>
-
-    <h2 class="titulo1">Igor Lima</h2>
-    <p class="titulo1">Responsável pela tecnologia do site e inovação técnica.  </p>
-    <a href="Membros/igor.html">Ver perfil completo</a>
-    <br>
-    <hr style="color: white;">
-    <br>
-    <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
-
-
+  <h1 class="titulo1">Conheça nossa equipe</h1>
+  <p class="titulo1">Por trás de cada linha de código, existe um rosto. Conheça as pessoas que tornam isso possível.</p>
+  <h2 class="titulo1">Renner Farias</h2>
+  <p class="titulo1">Responsável pelo desenvolvimento e coordenação técnica do projeto.</p>
+  <a href="Membros/renner.html">Ver perfil completo</a>
+  <h2 class="titulo1">José Artur</h2>
+  <p class="titulo1">Responsável pela identidade visual e experiência do usuário.
+  </p>
+  <a href="Membros/jose.html">Ver perfil completo</a>
+  <h2 class="titulo1">Igor Lima</h2>
+  <p class="titulo1">Responsável pela tecnologia do site e inovação técnica.  </p>
+  <a href="Membros/igor.html">Ver perfil completo</a>
+  <br>
+  <p class="titulo1">&copy;2025 TechConnect. Todos os direitos reservados.</p>
 </body>
-
 </html>
