--- a/index.html
+++ b/index.html
@@ -2,75 +2,54 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        a:hover {
-            color: red;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <div align="center" class="teste">
-        <nav>
-            <a href="../site_empresarial/quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../site_empresarial/portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../site_empresarial/equipe.html"><font color="white">Equipe</font></a>
-            <a href="../site_empresarial/contato.html"><font color="white">Contato</font></a>
-        </nav>
+  <nav>
+    <a href="../site_empresarial/index.html">Home</a>| 
+    <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+    <a href="../site_empresarial/portifolio.html">Portifólio</a>|
+    <a href="../site_empresarial/contato.html">Contato</a>|
+    <a href="../site_empresarial/equipe.html">Equipe</a>
+  </nav>
+
+  <div class="center-text">
+    <h1>Bem-vindo à TechConnect</h1>
+    <p>
+      A <b>TechConnect</b> é uma empresa de tecnologia voltada para o desenvolvimento de soluções digitais inovadoras. Nosso principal objetivo é conectar pessoas e negócios através da tecnologia, criando sistemas, sites e aplicativos que impulsionam a produtividade e a transformação digital.
+    </p>
+    <p>
+      Com uma equipe multidisciplinar e apaixonada por inovação, oferecemos serviços que vão desde o design e desenvolvimento web até consultoria em TI, sempre prezando pela qualidade, segurança e experiência do usuário.
+    </p>
+    <p>
+      Na TechConnect, acreditamos que a tecnologia é a ponte que une ideias e resultados. Por isso, trabalhamos para tornar cada projeto uma conexão de sucesso entre o futuro e o presente.
+    </p>
+  </div>
+
+  <div class="center-text" id="service">
+    <h2>Nossos Serviços</h2>
+    <div class="service-grid">
+      <div class="box-service">
+        <h3>Desenvolvimento de sites e sistemas web</h3>
+      </div>
+      <div class="box-service">
+        <h3>Desenvolvimento de sites e sistemas web</h3>
+      </div>
+      <div class="box-service">
+        <h3>Desenvolvimento de sites e sistemas web</h3>
+      </div>
+      <div class="box-service">
+        <h3>Desenvolvimento de sites e sistemas web</h3>
+      </div>
     </div>
-    <hr style="color: white;">
+  </div>
 
-    <div align="center">
-        <h1 class="titulo2">Bem-vindo à TechConnect</h1>
-        <p class="titulo1">
-            A <b>TechConnect</b> é uma empresa de tecnologia voltada para o desenvolvimento de soluções digitais inovadoras. 
-            <br>Nosso principal objetivo é conectar pessoas e negócios através da tecnologia, criando sistemas, <br>sites e aplicativos 
-            que impulsionam a produtividade e a transformação digital.
-        </p>
-
-        <p class="titulo1">
-            Com uma equipe multidisciplinar e apaixonada por inovação, oferecemos serviços que vão desde o design e 
-            desenvolvimento web <br> até consultoria em TI, sempre prezando pela qualidade, segurança e experiência do usuário.
-        </p>
-
-        <p class="titulo1">
-            Na TechConnect, acreditamos que a tecnologia é a ponte que une ideias e resultados. <br> Por isso, trabalhamos para tornar 
-            cada projeto uma conexão de sucesso entre o futuro e o presente.
-        </p>
-    </div><br><br><br><br><br><br>
-
-    <div>
-        <h2><font color="white">Nossos Serviços</font></h2>
-            <ul style="list-style-type:none; color:white;">
-                <li>💻 Desenvolvimento de sites e sistemas web</li>
-                <li>📱 Criação de aplicativos personalizados</li>
-                <li>☁️ Consultoria em tecnologia e infraestrutura</li>
-                <li>🔒 Suporte e segurança digital</li>
-            </ul>
-    </div>
-
-
-    <a href="quemsomos.html" class="botao">Saiba mais</a>
-
-    
-
+  <h1 class="center-text">Em Breve...</h1>
 
 </body>
-
 </html>
