--- a/portifolio.html
+++ b/portifolio.html
@@ -4,37 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="style.css">
-     <style>
-        a:hover {
-            color: red;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div align="center" class="teste">
-        <nav>
-            <a href="../site_empresarial/index.html"><font color="white">Home</font></a>
-            <a href="../site_empresarial/quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../site_empresarial/portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../site_empresarial/equipe.html"><font color="white">Equipe</font></a>
-            <a href="../site_empresarial/contato.html"><font color="white">Contato</font></a>
-        </nav>
-    </div>
-    <hr style="color: white;">
-
+  <nav>
+    <a href="../site_empresarial/index.html">Home</a>
+    <a href="../site_empresarial/quemsomos.html">Quem somos</a>
+    <a href="../site_empresarial/portifolio.html">Portifólio</a>
+    <a href="../site_empresarial/contato.html">Contato</a>
+    <a href="../site_empresarial/equipe.html">Equipe</a>
+  </nav>
 </body>
 </html>
