--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -5,25 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renner</title>
-    <link rel="stylesheet" href="../classe.css">
-    <style>
-        a:hover {
-            color: red;
-        }
-
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/classe.css">
 </head>
 
 <body>
