Ajustes nos perfis com css

--- a/Membros/igor.html
+++ b/Membros/igor.html
@@ -5,60 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Igor</title>
-    <link rel="stylesheet" href="css/classe.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <div align="center"> 
-        <nav>
-            <a href="../index.html"><font color="white">Home</font></a>
-            <a href="../quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../equipe.html"><font color="white">Equipe</font></a>
-            <a href="../contato.html"><font color="white">Contato</font></a>
-        </nav>
-    </div>  
-    <hr style="color: white;">
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../quemsomos.html">Quem somos</a>
+        <a href="../portifolio.html">Portifólio</a>
+        <a href="../equipe.html">Equipe</a>
+        <a href="../contato.html">Contato</a>
+    </nav>
 
-    <h1 align="center"><font color="white">Igor Lima</font></h1>
+    <hr>
 
-    <div align="center">
+    <section class="profile">
+        <h1>Igor Lima</h1>
+
         <a href="https://github.com/Igor3k21" target="_blank">
-        <img src="../img/Equipe/igor.jpg" width="150px" align=>
+            <img src="../img/Equipe/igor.jpg" alt="Igor Lima">
         </a>
-    </div>
 
-    <table cellpadding="10" border="0" width="50%" align=center>
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white;">
-                    Tenho 18 anos e sou apaixonado por tecnologia. Atualmente faço o curso de Sistemas de Informação
-                    e gosto de explorar novas ideias e desafios. Valorizo muito minha família e minhas amizades, que
-                    são parte essencial de quem sou. No tempo livre, curto treinar, praticar judô e jogar.
-                </p>    
-            </td>
-        </tr>
-    </table>
+        <p>
+            Tenho 18 anos e sou apaixonado por tecnologia. Atualmente faço o curso de Sistemas de Informação
+            e gosto de explorar novas ideias e desafios. Valorizo muito minha família e minhas amizades, que
+            são parte essencial de quem sou. No tempo livre, curto treinar, praticar judô e jogar.
+        </p>
+    </section>
 
+    <hr>
 
-    <hr style="color: white;">
+    <section class="profile">
+        <h2>Um pouquinho sobre mim</h2>
 
-    <h2 align="center"><font color="white">Um pouquinho sobre mim</font></h2>
-
-    <table cellpadding="10" border="0" width="50%" align="center">
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white;">
-                    Desde pequeno, sempre fui curioso sobre como as coisas funcionam — especialmente na área da
-                    tecnologia.
-                    Acredito que o aprendizado é um processo contínuo, e cada desafio é uma oportunidade de crescer.
-                    Meu objetivo é seguir evoluindo como desenvolvedor e, no futuro, criar projetos que facilitem a vida
-                    das pessoas e façam diferença no mundo digital.
-                </p>
-            </td>
-        </tr>
-    </table>
-
+        <p>
+            Desde pequeno, sempre fui curioso sobre como as coisas funcionam — especialmente na área da
+            tecnologia. Acredito que o aprendizado é um processo contínuo, e cada desafio é uma oportunidade
+            de crescer. Meu objetivo é seguir evoluindo como desenvolvedor e, no futuro, criar projetos que
+            facilitem a vida das pessoas e façam diferença no mundo digital.
+        </p>
+    </section>
 </body>
 
 </html>
