--- a/Membros/jose.html
+++ b/Membros/jose.html
@@ -1,78 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>José</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../quemsomos.html">Quem somos</a>
+        <a href="../portifolio.html">Portifólio</a>
+        <a href="../equipe.html">Equipe</a>
+        <a href="../contato.html">Contato</a>
+    </nav>
 
-    
+    <hr>
 
+    <section class="profile">
+        <h1>José Artur</h1>
 
-    <div align="center">
-        <nav>
-            <a href="../index.html">
-                <font color="white">Home</font>
-            </a>
-            <a href="../quemsomos.html">
-                <font color="white">Quem somos</font>
-            </a>
-            <a href="../portifolio.html">
-                <font color="white">Portifólio</font>
-            </a>
-            <a href="../equipe.html">
-                <font color="white">Equipe</font>
-            </a>
-            <a href="../contato.html">
-                <font color="white">Contato</font>
-            </a>
-        </nav>
-    </div>
-    <hr style="color: white;">
-
-    <h1 align="center"><font color="white">José Artur</font></h1>
-
-    <div align="center">
         <a href="https://github.com/Jose-si" target="_blank">
-            <img src="../img/Equipe/jose.png" width="150px" align=>
+            <img src="../img/Equipe/jose.png" alt="José Artur">
         </a>
-    </div>
 
-    <table cellpadding="10" border="0" width="50%" align=center>
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white;">
-                    Me chamo José, tenho 19 anos de idade, atualmente estou cursando Sistemas de Informação como curso superior na prestigiada Unifacisa, tenho muito
-                    orgulho de dizer que consigo me destacar junto dos meu colegas e sou muito feliz cursando nessa área, estou buscando também uma oportunidade de 
-                    estágio para conhecer ainda mais fundo sobre tecnologia e sou uma pessoa que gosta muito de ouvir músicas, jogar, treinar e passar um bom tempo
-                    com minha namorada!
-                </p>
-            </td>
-        </tr>
-    </table>
+        <p>
+            Me chamo José, tenho 19 anos e atualmente estou cursando Sistemas de Informação na Unifacisa.
+            Tenho muito orgulho de dizer que consigo me destacar junto dos meus colegas e sou muito feliz
+            cursando nessa área. Estou em busca de uma oportunidade de estágio para conhecer ainda mais
+            sobre tecnologia. Sou uma pessoa que gosta muito de ouvir músicas, jogar, treinar e passar um
+            bom tempo com minha namorada!
+        </p>
+    </section>
 
+    <hr>
 
-    <hr style="color: white;">
+    <section class="profile">
+        <h2>Um pouquinho sobre mim</h2>
 
-    <h2 align="center"><font color=white>Um pouquinho sobre mim</font></h2>
-
-    <table cellpadding="10" border="0" width="50%" align="center">
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white; ">
-                    Desde criança, sentia que fazia parte da área de tecnologia e sabia que iria fazer parte dela hora ou outra,
-                    sempre gostei muito de assistir montagem de computadores, celulares e etc, comecei a despertar um interesse ainda maior
-                    quando descobri o mundo da programação e soube que esse seria meu caminho e me sinto em casa quando estou na frente
-                    do computador programando!
-                </p>
-            </td>
-        </tr>
-    </table>
-
+        <p>
+            Desde criança, sentia que faria parte da área de tecnologia. Sempre gostei de assistir a montagens
+            de computadores e celulares. Meu interesse cresceu ainda mais quando descobri o mundo da programação
+            — soube que esse seria meu caminho. Hoje me sinto em casa quando estou na frente do computador
+            programando!
+        </p>
+    </section>
 </body>
 
 </html>
