--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -5,67 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renner</title>
-    <link rel="stylesheet" href="css/classe.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <div align="center">
-        <nav align="center">
-        <a href="../index.html"><font color="white">Home</font></a>
-        <a href="../quemsomos.html"><font color="white">Quem somos</font></a>
-        <a href="../portifolio.html"><font color="white">Portifólio</font></a>
-        <a href="../equipe.html"><font color="white">Equipe</font></a>
-        <a href="../contato.html"><font color="white">Contato</font></a>
-        </nav>
-    </div>
-    <hr style="color: white;">
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../quemsomos.html">Quem somos</a>
+        <a href="../portifolio.html">Portifólio</a>
+        <a href="../equipe.html">Equipe</a>
+        <a href="../contato.html">Contato</a>
+    </nav>
 
-    <h1 align="center"><font color="white">Renner Farias</font></h1>
+    <hr>
 
-    <div align="center">
+    <section class="profile">
+        <h1>Renner Farias</h1>
+
         <a href="https://github.com/RennerFarias" target="_blank">
-            <img src="../img/Equipe/renner.jpg" width="200px" alt="Renner">
+            <img src="../img/Equipe/renner.jpg" width="150px" alt="Renner Farias">
         </a>
-    </div>
 
-    
+        <p>
+            Tenho 20 anos e valorizo uma vida disciplinada e equilibrada. Estudante de
+            Sistemas de Informação, minha rotina é dividida entre o desenvolvimento do corpo,
+            através de musculação e corrida, e o aprimoramento da mente, com leitura, estudos
+            acadêmicos e desenvolvimento de projetos na área de tecnologia, que considero
+            essenciais para meu crescimento pessoal e profissional. XD
+        </p>
+    </section>
 
-    <table cellpadding="10" border="0" width="50%" align="center">
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white;">
-                    Tenho 20 anos e valorizo um vida disciplinada e equilibrada. Estudante de
-                Sistemas de
-                Informação, minha rotina é dividida entre o desenvolvimento do corpo, através de musculação e corrida, e
-                o
-                aprimoramento da mente, com leitura, estudos acadêmicos e desenvolvimento de projetos na área de
-                tecnologia, que
-                considero essenciais para meu crescimento pessoal e profissional. XD
-                </p>
-            </td>
-        </tr>
-    </table>
+    <hr>
 
-    
-    </table>
-    <hr style="color: white;">
+    <section class="profile">
+        <h2>Um pouquinho sobre mim</h2>
 
-    <h2 align="center"><font color="white">Um pouquinho sobre mim</font></h2>
-
-    <table cellpadding="10" border="0" width="50%" align="center">
-        <tr>
-            <td>
-                <p style="font-size: 20px; color: white;">
-                    Quando eu era mais novo, tive a oportunidade de ter um vizinho que estudava programação, e eu sempre
-                    ficava observando. Também tive contato com computadores desde muito cedo, eu os desmontava e montava
-                    para aprender. Quando fiquei um pouco mais velho, por volta dos 9 ou 10 anos, disse a esse vizinho:
-                    “Quero ser como você”. Desde aquele dia, passei a me aventurar na área de computação e programação
-                    de sites e jogos.
-                </p>
-            </td>
-        </tr>
-    </table>
-
+        <p>
+            Quando eu era mais novo, tive a oportunidade de ter um vizinho que estudava programação,
+            e eu sempre ficava observando. Também tive contato com computadores desde muito cedo —
+            eu os desmontava e montava para aprender. Quando fiquei um pouco mais velho, por volta
+            dos 9 ou 10 anos, disse a esse vizinho: “Quero ser como você”. Desde aquele dia, passei
+            a me aventurar na área de computação e programação de sites e jogos.
+        </p>
+    </section>
 </body>
 
 </html>
