--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renner</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../quemsomos.html">Quem somos</a>
-        <a href="../portifolio.html">Portifólio</a>
-        <a href="../equipe.html">Equipe</a>
-        <a href="../contato.html">Contato</a>
-    </nav>
+    <div align="center" class="teste">
+        <nav>
+            <a href="../index.html"><font color="white">Home</font></a>
+            <a href="../quemsomos.html"><font color="white">Quem somos</font></a>
+            <a href="../portifolio.html"><font color="white">Portifólio</font></a>
+            <a href="../equipe.html"><font color="white">Equipe</font></a>
+            <a href="../contato.html"><font color="white">Contato</font></a>
+        </nav>
+    </div>
 
-    <hr>
+    <hr style="color: white;">
 
     <section class="profile">
         <h1>Renner Farias</h1>
@@ -35,7 +37,7 @@
         </p>
     </section>
 
-    <hr>
+    <hr style="color: white;">
 
     <section class="profile">
         <h2>Um pouquinho sobre mim</h2>
@@ -44,10 +46,14 @@
             Quando eu era mais novo, tive a oportunidade de ter um vizinho que estudava programação,
             e eu sempre ficava observando. Também tive contato com computadores desde muito cedo —
             eu os desmontava e montava para aprender. Quando fiquei um pouco mais velho, por volta
-            dos 9 ou 10 anos, disse a esse vizinho: “Quero ser como você”. Desde aquele dia, passei
+            dos 9 ou 10 anos, disse a esse vizinho: "Quero ser como você". Desde aquele dia, passei
             a me aventurar na área de computação e programação de sites e jogos.
         </p>
     </section>
+    
+    <br>
+    <hr style="color: white;">
+    <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 </body>
 
 </html>
