--- a/equipe.html
+++ b/equipe.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <div align="center" class="teste">
   <nav>
     <a href="../site_empresarial/index.html">Home</a>
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>
@@ -14,19 +16,25 @@
     <a href="../site_empresarial/contato.html">Contato</a>
     <a href="../site_empresarial/equipe.html">Equipe</a>
   </nav>
+  </div>
+
 
   <h1 class="titulo1">Conheça nossa equipe</h1>
   <p class="titulo1">Por trás de cada linha de código, existe um rosto. Conheça as pessoas que tornam isso possível.</p>
+
   <h2 class="titulo1">Renner Farias</h2>
   <p class="titulo1">Responsável pelo desenvolvimento e coordenação técnica do projeto.</p>
   <a href="Membros/renner.html">Ver perfil completo</a>
+
   <h2 class="titulo1">José Artur</h2>
   <p class="titulo1">Responsável pela identidade visual e experiência do usuário.
   </p>
   <a href="Membros/jose.html">Ver perfil completo</a>
+
   <h2 class="titulo1">Igor Lima</h2>
   <p class="titulo1">Responsável pela tecnologia do site e inovação técnica.  </p>
   <a href="Membros/igor.html">Ver perfil completo</a>
+  
   <br>
   <p class="titulo1">&copy;2025 TechConnect. Todos os direitos reservados.</p>
 </body>
