--- a/Membros/renner.html
+++ b/Membros/renner.html
@@ -11,11 +11,11 @@
 <body>
     <div align="center" class="teste">
         <nav>
-            <a href="../index.html"><font color="white">Home</font></a>
-            <a href="../quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../equipe.html"><font color="white">Equipe</font></a>
-            <a href="../contato.html"><font color="white">Contato</font></a>
+            <a href="../index.html">Home</a>|
+            <a href="../quemsomos.html">Quem somos</a>|
+            <a href="../portifolio.html">Portifólio</a>|
+            <a href="../equipe.html">Equipe</a>|
+            <a href="../contato.html">Contato</a>|
         </nav>
     </div>
 
@@ -50,10 +50,6 @@
             a me aventurar na área de computação e programação de sites e jogos.
         </p>
     </section>
-    
-    <br>
-    <hr style="color: white;">
-    <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
 </body>
 
 </html>
