--- a/contato.html
+++ b/contato.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="css/style.css">
+
 <body>
     <div align="center" class="teste">
         <nav>
-            <a href="../site_empresarial/index.html"><font color="white">Home</font></a>
-            <a href="../site_empresarial/quemsomos.html"><font color="white">Quem somos</font></a>
-            <a href="../site_empresarial/portifolio.html"><font color="white">Portifólio</font></a>
-            <a href="../site_empresarial/equipe.html"><font color="white">Equipe</font></a>
-            <a href="../site_empresarial/contato.html"><font color="white">Contato</font></a>
+            <a href="../site_empresarial/index.html">Home</a>|
+            <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+            <a href="../site_empresarial/portifolio.html">Portifólio</a>|
+            <a href="../site_empresarial/equipe.html">Equipe</a>
+            <a href="../site_empresarial/contato.html">Contato</a>|
         </nav>
     </div>
     <hr style="color: white;">
@@ -24,7 +25,8 @@
     <h2 class="titulo1">Informações de Contato</h2>
     <p class="titulo1"><strong>Email:</strong> contato@techconnect.com.br</p>
     <p class="titulo1"><strong>Telefone:</strong> (00) 00000-0000</p>
-    <p class="titulo1"><strong>Endereço:</strong> R. Manoel Cardoso Palhano, 124-152 - Itararé, Campina Grande - PB, 58408-326</p>
+    <p class="titulo1"><strong>Endereço:</strong> R. Manoel Cardoso Palhano, 124-152 - Itararé, Campina Grande - PB,
+        58408-326</p>
 
 
     <h2 class="titulo1">Redes Sociais</h2>
