--- a/equipe.html
+++ b/equipe.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Equipe</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <div align="center" class="teste">
-  <nav>
-    <a href="../site_empresarial/index.html">Home</a>
-    <a href="../site_empresarial/quemsomos.html">Quem somos</a>
-    <a href="../site_empresarial/portifolio.html">Portifólio</a>
-    <a href="../site_empresarial/contato.html">Contato</a>
-    <a href="../site_empresarial/equipe.html">Equipe</a>
-  </nav>
+    <nav>
+      <a href="../site_empresarial/index.html">Home</a>|
+      <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+      <a href="../site_empresarial/portifolio.html">Portifólio</a>|
+      <a href="../site_empresarial/equipe.html">Equipe</a>
+      <a href="../site_empresarial/contato.html">Contato</a>|
+    </nav>
   </div>
 
 
@@ -32,10 +34,11 @@
   <a href="Membros/jose.html">Ver perfil completo</a>
 
   <h2 class="titulo1">Igor Lima</h2>
-  <p class="titulo1">Responsável pela tecnologia do site e inovação técnica.  </p>
+  <p class="titulo1">Responsável pela tecnologia do site e inovação técnica. </p>
   <a href="Membros/igor.html">Ver perfil completo</a>
-  
+
   <br>
   <p class="titulo1">&copy;2025 TechConnect. Todos os direitos reservados.</p>
 </body>
+
 </html>
