--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
 <body>
 
   <nav>
-    <a href="../site_empresarial/index.html">Home</a>| 
+    <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
     <a href="../site_empresarial/portifolio.html">Portifólio</a>|
-    <a href="../site_empresarial/contato.html">Contato</a>|
     <a href="../site_empresarial/equipe.html">Equipe</a>
+    <a href="../site_empresarial/contato.html">Contato</a>|
   </nav>
 
   <div class="center-text">
     <h1>Bem-vindo à TechConnect</h1>
     <p>
-      A <b>TechConnect</b> é uma empresa de tecnologia voltada para o desenvolvimento de soluções digitais inovadoras. Nosso principal objetivo é conectar pessoas e negócios através da tecnologia, criando sistemas, sites e aplicativos que impulsionam a produtividade e a transformação digital.
+      A <b>TechConnect</b> é uma empresa de tecnologia voltada para o desenvolvimento de soluções digitais inovadoras.
+      Nosso principal objetivo é conectar pessoas e negócios através da tecnologia, criando sistemas, sites e
+      aplicativos que impulsionam a produtividade e a transformação digital.
     </p>
     <p>
-      Com uma equipe multidisciplinar e apaixonada por inovação, oferecemos serviços que vão desde o design e desenvolvimento web até consultoria em TI, sempre prezando pela qualidade, segurança e experiência do usuário.
+      Com uma equipe multidisciplinar e apaixonada por inovação, oferecemos serviços que vão desde o design e
+      desenvolvimento web até consultoria em TI, sempre prezando pela qualidade, segurança e experiência do usuário.
     </p>
     <p>
-      Na TechConnect, acreditamos que a tecnologia é a ponte que une ideias e resultados. Por isso, trabalhamos para tornar cada projeto uma conexão de sucesso entre o futuro e o presente.
+      Na TechConnect, acreditamos que a tecnologia é a ponte que une ideias e resultados. Por isso, trabalhamos para
+      tornar cada projeto uma conexão de sucesso entre o futuro e o presente.
     </p>
   </div>
 
@@ -52,4 +56,5 @@
   <h1 class="center-text">Em Breve...</h1>
 
 </body>
+
 </html>
