--- a/portifolio.html
+++ b/portifolio.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portifólio</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <nav>
-    <a href="../site_empresarial/index.html">Home</a>
-    <a href="../site_empresarial/quemsomos.html">Quem somos</a>
-    <a href="../site_empresarial/portifolio.html">Portifólio</a>
-    <a href="../site_empresarial/contato.html">Contato</a>
+    <a href="../site_empresarial/index.html">Home</a>|
+    <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
+    <a href="../site_empresarial/portifolio.html">Portifólio</a>|
     <a href="../site_empresarial/equipe.html">Equipe</a>
+    <a href="../site_empresarial/contato.html">Contato</a>|
   </nav>
 </body>
+
 </html>
