--- a/Membros/jose.html
+++ b/Membros/jose.html
@@ -10,11 +10,11 @@
 
 <body>
     <nav>
-        <a href="../index.html">Home</a>
-        <a href="../quemsomos.html">Quem somos</a>
-        <a href="../portifolio.html">Portifólio</a>
-        <a href="../equipe.html">Equipe</a>
-        <a href="../contato.html">Contato</a>
+        <a href="../index.html">Home</a>|
+        <a href="../quemsomos.html">Quem somos</a>|
+        <a href="../portifolio.html">Portifólio</a>|
+        <a href="../equipe.html">Equipe</a>|
+        <a href="../contato.html">Contato</a>|
     </nav>
 
     <hr>
