--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 
 <body>
-    <div align="center" class="teste">
+
+    <body>
         <nav>
             <a href="../site_empresarial/index.html">Home</a>|
             <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
@@ -16,7 +17,7 @@
             <a href="../site_empresarial/equipe.html">Equipe</a>
             <a href="../site_empresarial/contato.html">Contato</a>|
         </nav>
-    </div>
+    </body>
     <hr style="color: white;">
 
     <h1 class="titulo1">Fale Conosco</h1>
