--- a/equipe.html
+++ b/equipe.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <div align="center" class="teste">
+  <body>
     <nav>
       <a href="../site_empresarial/index.html">Home</a>|
       <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
@@ -18,7 +18,7 @@
       <a href="../site_empresarial/equipe.html">Equipe</a>
       <a href="../site_empresarial/contato.html">Contato</a>|
     </nav>
-  </div>
+  </body>
 
 
   <h1 class="titulo1">Conheça nossa equipe</h1>
