--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="../site_empresarial/index.html">Home</a>|
     <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
     <a href="../site_empresarial/portifolio.html">Portifólio</a>|
-    <a href="../site_empresarial/equipe.html">Equipe</a>
+    <a href="../site_empresarial/equipe.html">Equipe</a>|
     <a href="../site_empresarial/contato.html">Contato</a>|
   </nav>
 
