--- a/quemsomos.html
+++ b/quemsomos.html
@@ -2,20 +2,94 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quem somos</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quem somos</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        a:hover {
+            color: red;
+        }
+
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
+   
+
+
 </head>
 
 <body>
-  <nav>
-    <a href="../site_empresarial/index.html">Home</a>|
-    <a href="../site_empresarial/quemsomos.html">Quem somos</a>|
-    <a href="../site_empresarial/portifolio.html">Portifólio</a>|
-    <a href="../site_empresarial/equipe.html">Equipe</a>|
-    <a href="../site_empresarial/contato.html">Contato</a>|
-  </nav>
+    <div align="center" class="teste">
+        <nav align="center">
+            <a href="../site_empresarial/index.html"><font color="white">Home</font></a>
+            <a href="../site_empresarial/quemsomos.html"><font color="white">Quem somos</font></a>
+            <a href="../site_empresarial/portifolio.html"><font color="white">Portifólio</font></a>
+            <a href="../site_empresarial/equipe.html"><font color="white">Equipe</font></a>
+            <a href="../site_empresarial/contato.html"><font color="white">Contato</font></a>
+            <a href="../site_empresarial/index.html">
+                <font color="white">Home</font>
+            </a>
+            <a href="../site_empresarial/quemsomos.html">
+                <font color="white">Quem somos</font>
+            </a>
+            <a href="../site_empresarial/portifolio.html">
+                <font color="white">Portifólio</font>
+            </a>
+            <a href="../site_empresarial/equipe.html">
+                <font color="white">Equipe</font>
+            </a>
+            <a href="../site_empresarial/contato.html">
+                <font color="white">Contato</font>
+            </a>
+        </nav>
+    </div>
+    <hr style="color: white;">
+
+    <div align="center">
+        <h1 style="color: white;">Quem somos</12>
+            <br><br>
+            <p style="font-size: 18px; line-height: 1.6; max-width: 900px; margin: 0 auto; color: white;">
+                A <strong>TechConnect</strong> nasceu com o propósito de transformar ideias em soluções digitais de
+                impacto.
+                Somos uma equipe apaixonada por tecnologia, inovação e criatividade, dedicada a conectar pessoas e
+                negócios
+                por meio do desenvolvimento de sistemas inteligentes e experiências digitais únicas.
+            </p>
+            <br>
+            <p style="font-size: 18px; line-height: 1.6; max-width: 900px; margin: 0 auto; color: white;">
+                Nosso compromisso é oferecer serviços que unam <strong>qualidade, desempenho e design</strong>,
+                sempre com foco na necessidade de cada cliente. Acreditamos que a tecnologia é a ponte entre o presente
+                e o futuro, e por isso buscamos constantemente aprimorar nossos processos e explorar novas tendências.
+            </p>
+
+            <h2 style="color: white;">Missão</h2>
+            <br>
+            <p style="font-size: 18px; color: white;">Ser referência em desenvolvimento digital, reconhecida pela
+                excelência, inovação e impacto positivo no mercado.</p>
+            <br>
+            <h2 style="color: white;">Valores</h2>
+            <ul style="font-size: 18px; color: white; list-style-position: inside; text-align: center; padding: 0;">
+                <li>Inovação constante</li>
+                <li>Comprometimento com a qualidade</li>
+                <li>Transparência e ética</li>
+                <li>Trabalho em equipe</li>
+                <li>Foco no cliente</li>
+            </ul>
+    </div>
+    <hr color="white">
+    <br>
+    <p class="titulo1">&copy; 2025 TechConnect. Todos os direitos reservados.</p>
+    
 </body>
 
 </html>
